--- a/readyplayerone.css
+++ b/readyplayerone.css
@@ -1,17 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
+
 body {
     margin: 0;
 
     height: 100vh;
 
-    background-image: url("./assets/bg.png");
+    background-image: url("./assets/bg-vignette.png");
     background-repeat: no-repeat;
+    background-color: black;
     background-size: cover;
-    background-position: center;
+    background-position-x: 0px;
+    background-position-y: 0px;
+    /*background-position: center;*/
 
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    font-family: monospace;
 }
 
 #main-page {
@@ -22,6 +28,7 @@ body {
     backdrop-filter: blur(10px);
     background-color: rgba(0, 0, 0, 0.75);
     padding: 20px;
+    text-align: center;
 }
 
 #main-title, #main-subtitle {
@@ -29,7 +36,8 @@ body {
 }
 
 #main-title {
-    font-size: 2.5em;
+    font-size: 3.5em;
+    font-family: "Rubik Mono One", monospace;
 }
 
 #main-subtitle {
@@ -39,4 +47,98 @@ body {
 #titles {
     text-align: center;
     font-weight: bold;
+}
+
+iframe:hover {
+    animation-name: glow;
+    animation-duration: 0.5s;
+    box-shadow: 0px 0px 20px 20px rgb(255, 255, 255);
+}
+
+@keyframes glow {
+    0% {
+        box-shadow: 0px 0px 20px 0px rgb(255, 255, 255);
+    }
+
+    100% {
+        box-shadow: 0px 0px 20px 20px rgb(255, 255, 255);
+    }
+}
+
+#synopsis {
+    color: white;
+    font-size: 18pt;
+}
+
+#synopsis-parent {
+    text-align: left;
+    height: 200px;
+    overflow-y: scroll;
+}
+
+#back-button {
+    color: white;
+    user-select: none;
+    text-decoration: none;
+}
+
+#back-button-parent {
+    text-align: left;
+    border-bottom: 1px solid white;
+    padding-bottom: 10px;
+}
+
+::-webkit-scrollbar {
+width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+background: white;
+border-radius: 5px 5px 5px 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: #888;
+border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+background: #555;
+}
+
+input[type=email] {
+background-color: black;
+color: white;
+font-size: 18pt;
+border: 3px solid white;
+}
+
+button {
+font-size: 18pt;
+background-color: black;
+color: white;
+font-size: 18pt;
+border: 3px solid white;
+}
+
+button:hover {
+font-size: 18pt;
+background-color: white;
+color: black;
+font-size: 18pt;
+border: 3px solid white;
+cursor: pointer;
+}
+
+#input-container {
+display: flex;
+justify-content: space-around;
+align-items: center;
+}
+
+.hidden {
+    display: none;
 }
